syntax = "proto3";
package main.requests;

option go_package = "types/";

message RequestSignUpUser {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RequestLogInUser {
  string email = 1;
  string password = 2;
  string deviceName = 3;
}

message RequestSetDisplayName { string displayName = 1; }

message RequestSetBio { string bio = 1; }

message RequestGetBookmarks { uint32 page = 1; }

message RequestToggleBookmark { string postID = 1; }

message RequestToggleLike { string postID = 1; }

message RequestToggleFollow { string userID = 1; }

message RequestDeletePost { string postID = 1; }

message RequestGetPosts {
  string username = 1;
  uint32 page = 2;
}

message RequestEditProfile {
  string displayName = 1;
  string bio = 2;
  bool didAvatarChange = 3;
  bytes avatar = 4;
  bool didBannerChange = 5;
  bytes banner = 6;
  bool isFollowersPublic = 7;
  bool isFollowingPublic = 8;
  bool isPostsPublic = 9;
  bool isLikesPublic = 10;
  string prefferedTheme = 11;
  string prefferedLanguage = 12;
}